@@ -57,6 +57,7 @@
 // C++ generic includes
 #include <memory>
 #include <iostream>
+#include <fstream>
 #include <string>
 #include <set>
 #include <map>
